blog and code update

--- a/blogpost-template-main/_posts/2024-11-16-ift6758-milestone-2.md
+++ b/blogpost-template-main/_posts/2024-11-16-ift6758-milestone-2.md
@@ -6,6 +6,31 @@ toc: true
 
 ## Ingénierie des caractéristiques I
 
+### 1- Analyse de la fréquence de tirs, par distance et angle de tir
+#### 1.a- Histogramme du nombre de tirs, regroupé par distance de tir
+![2_1a_histogramme_nbre_tirs_par_distance.png](../../figure/2_1a_histogramme_nbre_tirs_par_distance.png)
+Les tirs se font tout près du gardien, particulièrement à moins de 60 pieds. Du coup, aussi, la chance de but est plus élevée si le tir a été effectué plus proche du gardien.
+#### 1.b- Histogramme du nombre de tirs, regroupé par angle de tir
+![2_1b_histogramme_nbre_tirs_par_angle.png](../../figure/2_1b_histogramme_nbre_tirs_par_angle.png)
+La majorité des tirs ont été effectué à un angle de moins de 90 degrés par rapport à l'axe du milieu du filet du gardien. De plus, plus le tir a été fait en face du gardien (angle plus petit), plus la chance de but est plus élevée.
+#### 1.c- Histogramme du nombre de tirs, regroupé par angle de tir
+#### Histogramme 2D : Distance et angle de tir
+![2_1c_Histogramme 2D du nombre de tirs par distance et angle.png](../../figure/2_1c_Histogramme%202D%20du%20nombre%20de%20tirs%20par%20distance%20et%20angle.png)
+Les tirs sont plus fréquents à une distance d'entre 10 et 65, et un angle de moins de 50 degrés, du gardien.
+
+### 2- Analyse du taux de but, par rapport à la distance et l'angle de tir
+#### 2.a- Taux de but par distance de tir
+![2_2a_Taux de but en fonction de la distance.png](../../figure/2_2a_Taux%20de%20but%20en%20fonction%20de%20la%20distance.png)
+Un joeur a 17.4% de chance de scorer s'il effectue un tir à moins de 20 pieds de distance du gardien, et 9.1% de chance à une distance entre 20 et 40 pieds.
+#### 2.a- Taux de but par angle de tir
+![2_2b_Taux de but en fonction de l'angle.png](../../figure/2_2b_Taux%20de%20but%20en%20fonction%20de%20l%27angle.png)
+Concernant l'angle de tir par rapport l'axe du milieu du filet du gardien, un joeur a 11.7% de chance de scorer s'il effectue un tir à moins de 20 degrés du gardien, et 8.2% à un angle d'entre 20 et 40 degrés.
+Toutefois, il faut remarquer qu'un tir effectué à un angle entre 160 et 180 a 85.7% de chance d'être but.
+
+
+### Vérifications des données
+
+
 ### Nombre de buts selon la distance au filet
 
 Le graphique suivant nous montre le nombre de buts marqués selon la distance au filet avec une
@@ -47,6 +72,39 @@ Sidney Crosby a marqué un but de type **wrist** durant la 3ième période du ma
 la vidéo [ici](https://www.youtube.com/watch?v=CHcbWHyRDbE)). Cependant,
 dans les données qu'on a récupérées sur le site de la NHL, le but est enrégistré comme étant de type **wrap-around**, ce
 qui est impossible, car un tir de type **wrap-around** est toujours proche des filets.
+
+
+
+## Modèles de base: Régression logistique
+
+### - Précision du modèle : Accuracy (Exactitude), et f1-score
+  - Ici, on utilise la regression logistique pour évaluer la probabilité de but à partir de la distance de tir. Ainsi, on a trouvé 0.91 comme accuracy, et 0.86 comme f1-score. Ces résultats sont inquiétants, car l'accuracy traduit que 91% des données sont bien prédites par le modèle.
+  - En effet, une précision élevée ne signifie pas nécessairement que le modèle est performant, surtout si les classes sont déséquilibrées (ex. : beaucoup plus de non-buts que de buts)
+  - De plus, la distance seule peut ne pas capturer suffisamment de complexité dans les données pour prédire efficacement si un tir est un but.
+
+### - Modèles de Régression Linéaire : Distance, Angle, Distance et Angle
+
+#### - Courbes ROC/AUC
+![2_3_3a_Courbes ROC.png](../../figure/2_3_3a_Courbes%20ROC.png)
+- Liens WandB :
+  - [Modèle avec Distance seulement](https://wandb.ai/youry-macius-universite-de-montreal/IFT6758.2024-A11/runs/ggw9aqju?nw=nwuseryourymacius)
+  - [Modèle avec Angle seulement](https://wandb.ai/youry-macius-universite-de-montreal/IFT6758.2024-A11/runs/vs7ri7mc?nw=nwuseryourymacius)
+  - [Modèle avec Distance et angle](https://wandb.ai/youry-macius-universite-de-montreal/IFT6758.2024-A11/runs/aebyvrkh?nw=nwuseryourymacius)
+- Analyses :
+  - On voit que le modèle avec la distance seule a une aire sous la courbe ROC (AUC) de 0.69. Ainsi, ce modèle a classifié 69% des taux de vrais positifs.
+  - Le modèle avec l'angle seulement, avec un AUC de 0.56, est moins performant que la distance seule.
+  - Tandis que le modèle avec la distance et l'angle est le plus performant, avec un AUC de 0.71
+
+#### - Taux de buts et proportion cumulée de buts, en fonction du centile de probabilité
+![2_3_3b_Taux de buts par centile de probabilité.png](../../figure/2_3_3b_Taux%20de%20buts%20par%20centile%20de%20probabilit%C3%A9.png)
+![2_3_3c_Pourcentage cumulatif de Buts.png](../../figure/2_3_3c_Pourcentage%20cumulatif%20de%20Buts.png)
+- Ces courbes montrent la capacité du modèle à prédire des buts en fonction de la probabilité qu'il attribue à chaque tir. Donc, plus la probabilité de tir est élevée, plus le modèle arrive à prédire des buts.
+#### - Diagramme de fiabilité
+![2_3_3d_Diagramme de fiabilité.png](../../figure/2_3_3d_Diagramme%20de%20fiabilit%C3%A9.png)
+- Le modèle avec la distance et l'angle donne une meilleure representation de la la relation entre la probabilité prédite et la fréquence réelle.
+
+Conclusion : Le modele avec la distance et l'angle est plus performant, en notant toutefois que celui avec l'angle seulement est le moins performant.
+
 
 ## Ingénierie des caractéristiques II
 
