--- a/main_Milestone-2.ipynb
+++ b/main_Milestone-2.ipynb
@@ -131,6 +131,33 @@
    ]
   },
   {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "import os\n",
+    "\n",
+    "# Path to current directory\n",
+    "current_directory = os.getcwd()\n",
+    "print(f\"Current directory: {current_directory}\")\n",
+    "\n",
+    "# Name of the folder you want to create\n",
+    "figure = \"figure\"\n",
+    "\n",
+    "# Full path to the new folder\n",
+    "Full_figure = os.path.join(current_directory, figure)\n",
+    "\n",
+    "# Create the folder\n",
+    "try:\n",
+    "    os.makedirs(Full_figure, exist_ok=True)\n",
+    "    print(f\"Folder '{figure}' created successfully at {Full_figure}\")\n",
+    "except Exception as e:\n",
+    "    print(f\"Error creating folder: {e}\")"
+   ],
+   "id": "bb6aa033fcbcf16d"
+  },
+  {
    "cell_type": "markdown",
    "id": "a74a58e4d007a935",
    "metadata": {},
@@ -170,7 +197,7 @@
    "outputs": [],
    "source": [
     "## Add in advancedVisualisation (by Youry)\n",
-    "def histogram_2_variables_binned(df, x_bin, hue, shrink, xlabel, ylabel, title, legendTitle, legendLabels):\n",
+    "def histogram_2_variables_binned(df, x_bin, hue, shrink, xlabel, ylabel, title, legendTitle, legendLabels, saveName):\n",
     "    plt.figure(figsize=(10, 6))\n",
     "    sns.histplot(data=df, x=x_bin, hue=hue, multiple='dodge', palette='coolwarm', shrink=shrink)\n",
     "    plt.xlabel(xlabel)\n",
@@ -179,10 +206,11 @@
     "    plt.title(title)\n",
     "    plt.legend(title=legendTitle, labels=legendLabels)\n",
     "    plt.grid(axis=\"y\")\n",
+    "    plt.savefig(f'.../figure/{saveName}.png')\n",
     "    plt.show()\n",
     "\n",
     "\n",
-    "histogram_2_variables_binned(df=train_data, x_bin='shotDistance_bin', hue='isGoal', shrink=0.8, xlabel='Distance du tir (pieds)', ylabel='Nombre de tirs', title='Histogramme du nombre de tirs par distance', legendTitle='', legendLabels=['But', 'Non-but'])"
+    "histogram_2_variables_binned(df=train_data, x_bin='shotDistance_bin', hue='isGoal', shrink=0.8, xlabel='Distance du tir (pieds)', ylabel='Nombre de tirs', title='Histogramme du nombre de tirs par distance', legendTitle='', legendLabels=['But', 'Non-but'], saveName='2_1a_histogramme_nbre_tirs_par_distance')"
    ]
   },
   {
@@ -199,9 +227,7 @@
    "id": "82c884801d8862b3",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "histogram_2_variables_binned(df=train_data, x_bin='shotAngle_bin', hue='isGoal', shrink=0.8, xlabel='Angle du tir', ylabel='Nombre de tirs', title='Histogramme du nombre de tirs par angle', legendTitle='', legendLabels=['But', 'Non-but'])"
-   ]
+   "source": "histogram_2_variables_binned(df=train_data, x_bin='shotAngle_bin', hue='isGoal', shrink=0.8, xlabel='Angle du tir', ylabel='Nombre de tirs', title='Histogramme du nombre de tirs par angle', legendTitle='', legendLabels=['But', 'Non-but'], saveName='2_1b_histogramme_nbre_tirs_par_angle')"
   },
   {
    "cell_type": "markdown",
@@ -229,6 +255,7 @@
     "    plt.xlabel(xlabel)\n",
     "    plt.ylabel(ylabel)\n",
     "    plt.title(title)\n",
+    "    plt.savefig(f\".../figure/2_1c_{title}.png\")\n",
     "    plt.show()\n",
     "\n",
     "histogram2D_2_variables(train_data, x='shotDistance', y='shotAngle', bins=20, label='Nombre de tirs', xlabel='Distance du tir (pieds)', ylabel='Angle du tir', title='Histogramme 2D du nombre de tirs par distance et angle')"
@@ -309,7 +336,7 @@
     "df_distance_goal_rate = train_data.groupby('shotDistance')['isGoal'].mean().reset_index()\n",
     "df_distance_goal_rate.columns = ['shotDistance', 'goalRate']\n",
     "\n",
-    "df_distance_goal_rate"
+    "# df_distance_goal_rate"
    ]
   },
   {
@@ -349,7 +376,7 @@
     "df_angle_goal_rate = train_data.groupby('shotAngle')['isGoal'].mean().reset_index()\n",
     "df_angle_goal_rate.columns = ['shotAngle', 'goalRate']\n",
     "\n",
-    "df_angle_goal_rate"
+    "# df_angle_goal_rate"
    ]
   },
   {
@@ -398,10 +425,10 @@
    "outputs": [],
    "source": [
     "# Tracer la courbe\n",
-    "def plot_goal_rate(df, x, y, rate, rate_min, rate_max, plotTitle, title, fontSize, xlabel, sizeXlabel, ylabel, sizeYlabel):\n",
+    "def plot_goal_rate(df, x, y, rate, rate_min, rate_max, plotTitle, title, fontSize, xlabel, sizeXlabel, ylabel, sizeYlabel, saveName):\n",
     "    # Histogramme\n",
     "    plt.figure(figsize=(10, 6))\n",
-    "    bars = plt.bar(df.index, df[rate]*100, color='green', label=plotTitle)\n",
+    "    bars = plt.bar(df.index, df[rate]*100, color='blue', label=plotTitle)\n",
     "    # Annoter les ratios sur les barres\n",
     "    for bar, (_, row) in zip(bars, df.iterrows()):\n",
     "        x_i = int(row[x])\n",
@@ -424,10 +451,11 @@
     "    plt.grid(alpha=0.5)\n",
     "    # plt.legend()\n",
     "    plt.tight_layout()\n",
+    "    plt.savefig(f\".../figure/{saveName}.png\")\n",
     "    plt.show()\n",
     "\n",
     "\n",
-    "plot_goal_rate(goal_stats_by_distance, 'goals', 'total_shots', 'goal_rate', 0, 20, 'Taux de but', 'Taux de but en fonction de la distance', 14, 'Distance de tir', 12, 'Taux de but (%)', 12)"
+    "plot_goal_rate(goal_stats_by_distance, 'goals', 'total_shots', 'goal_rate', 0, 20, 'Taux de but', 'Taux de but en fonction de la distance', 14, 'Distance de tir', 12, 'Taux de but (%)', 12, saveName='2_2a_Taux de but en fonction de la distance')"
    ]
   },
   {
@@ -455,9 +483,7 @@
    "id": "f8af52da7e7e3998",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "plot_goal_rate(goal_stats_by_angle, 'goals', 'total_shots','goal_rate', 0, 100, 'Taux de but', 'Taux de but en fonction de l\\'angle', 14, 'Angle de tir', 12, 'Taux de but', 12)"
-   ]
+   "source": "plot_goal_rate(goal_stats_by_angle, 'goals', 'total_shots','goal_rate', 0, 100, 'Taux de but', 'Taux de but en fonction de l\\'angle', 14, 'Angle de tir', 12, 'Taux de but', 12, saveName='2_2b_Taux de but en fonction de l\\'angle')"
   },
   {
    "cell_type": "markdown",
@@ -679,7 +705,7 @@
     "accuracy = accuracy_score(y_val, y_pred)\n",
     "f1 = f1_score(y_val, y_pred, average=\"weighted\")\n",
     "print(f\"Précision du modèle sur l'ensemble de validation: {accuracy:.2f}\")\n",
-    "print(f\"F1-score du modèle sur l'ensemble de validation: {f1:.2f}\")"
+    "print(f\"\\nF1-score du modèle sur l'ensemble de validation: {f1:.2f}\")"
    ]
   },
   {
@@ -791,7 +817,7 @@
     "# ROC\n",
     "RocCurveDisplay.from_predictions(y_val, y_proba_but, name=\"Régression logistique\", color=\"blue\", ax=plt.gca())\n",
     "RocCurveDisplay.from_predictions(y_val, y_proba_random, name=\"Classificateur aléatoire\", color=\"gray\", linestyle=\"--\", ax=plt.gca())\n",
-    "plt.title(\"ROC Curves for Logistic Regression Models\")\n",
+    "plt.title(\"Courbes ROC\")\n",
     "plt.grid(True)\n",
     "plt.show()"
    ]
@@ -1067,8 +1093,9 @@
     "RocCurveDisplay.from_predictions(y2_val, y_proba_but_both, name=\"Distance + Angle\", color=\"red\", ax=plt.gca())\n",
     "RocCurveDisplay.from_predictions(y2_val, y2_proba_random, name=\"Random Baseline\", color=\"gray\", linestyle=\"--\", ax=plt.gca())\n",
     "\n",
-    "plt.title(\"ROC Curves for Logistic Regression Models\")\n",
+    "plt.title(\"Courbes ROC\")\n",
     "plt.grid(True)\n",
+    "# plt.savefig('2-3-3a_proportion_de_buts.png')\n",
     "plt.show()"
    ]
   },
@@ -1120,6 +1147,7 @@
     "# plt.ylim(0, 100)\n",
     "plt.grid(True)\n",
     "plt.legend()\n",
+    "# plt.savefig('2-3-3b_proportion_de_buts.png')\n",
     "plt.show()\n"
    ]
   },
@@ -1170,7 +1198,7 @@
     "\n",
     "plt.legend(fontsize=12)\n",
     "plt.tight_layout()\n",
-    "plt.savefig('./images/2-3-3c_proportion_de_buts.png')\n",
+    "# plt.savefig('2-3-3c_proportion_de_buts.png')\n",
     "plt.show()\n"
    ]
   },
