addition of test evaluation

--- a/blogpost-template-main/_posts/2024-11-16-ift6758-milestone-2.md
+++ b/blogpost-template-main/_posts/2024-11-16-ift6758-milestone-2.md
@@ -170,15 +170,13 @@ Tout d'abord, les deux modèles ont un AUC similaire (autour de **0.71**).
 Leurs courbes de taux de buts en fonction du percentile de probabilité sont similaires. En effet, elles croissent de la même manière quand le percentile
 augmente. Ca démontre que les probabilités prédites par les deux modèles sont assez cohérentes avec les fréquences observées.
 
-<!-- Ajouter comment courbe cumulative -->
-
 La courbe de calibration du modèle xgboost est cohérente au début
 mais devient incohérente aux extrémités et décroit, ce qui met en évidende la tendance du modèle à sur-prédire.
 La courbe de calibration du modèle logistique met plutot en évidence une tendance à sous-prédire.
 Cependant, il y'a des chances que ces tendance de sur et de sous-prédictions ne soient pas éffective, notament dans les cas
 ou il n'y a pas assez de données dans ces intervalles(bins) de sur ou de sous-prédictions.
 
-<!-- Ajouter lien expérience wandb -->
+Expérience sur wandb: https://wandb.ai/youry-macius-universite-de-montreal/IFT6758.2024-A11/runs/by6j4cbg?nw=nwuserfranckmichaelatongfor
 
 ### Modèle XGBoost avec de nouvelles caractéristiques
 
@@ -194,7 +192,7 @@ qui maximisait l'**érreur de calibration attendue négative**. Le graphique sui
 C'est donc la 16ième combinaison d'hyperparamètres qu'on a choisie pour notre modèle.
 Concernant les résultats du modèle, on voit dans les graphiques qu'il a un meilleur AUC que le modèle XGBoost de base, tout en restant assez bien calibré.
 
-<!-- Ajouter lien expérience wandb -->
+Expérience sur wandb: https://wandb.ai/youry-macius-universite-de-montreal/IFT6758.2024-A11/runs/w1kb9dgp?nw=nwuserfranckmichaelatongfor
 
 ### Modèle XGBoost avec des caractéristiques sélectionnées
 
@@ -210,20 +208,65 @@ Avec ce seuil, 8 variables explicatives sur les 15 initiales ont été conservé
 On remarque sur les graphiques que malgré cette diminution de pres de moitié du nombre de caractéristiques, l'AUC du modèle obtenu (**0.75**) reste encore bien supérieur
 à celui du modèle XGBoost de base (**0.71**). De plus, ce nouveau modèle est toujours bien calibré.
 
-<!-- Ajouter lien expérience wandb -->
+Expérience sur wandb: https://wandb.ai/youry-macius-universite-de-montreal/IFT6758.2024-A11/runs/72lbqaj4?nw=nwuserfranckmichaelatongfor
 
 ## Faites de votre mieux
 
+Au cours de cette étape, nous avons testé plusieurs modèles, utilisé plusieurs approches pour optimiser nos résultats.
+
 Nous avons commencé par utiliser des réseaux de neurones Perceptron et multicouches (MLP) pour évaluer différentes
-architectures. Le
-modèle de base (`Perceptron`) nous a servi de point de départ pour nos expérimentations. Ensuite, nous avons introduit
-des modèles plus complexes (`MLP_H1` et `MLP_H2`), avec une et deux couches cachées. Cela permettait de capturer les interactions entre les caractéristiques
+architectures. Le modèle de base (`Perceptron`) nous a servi de point de départ pour nos expérimentations. Ensuite, nous
+avons introduit
+des modèles plus complexes (`MLP_H1` et `MLP_H2`), avec une et deux couches cachées. Cela permettait de capturer les
+interactions entre les caractéristiques
+
+Malheureusement, l'optimisation s'est avérée être un défi majeur, nécessitant des ressources que nous n'avions pas à
+disposition. Face à ces cela, nous avons dû opter pour des méthodes plus simples, capables de s’entraîner avec un
+temps d'inférence raisonnable.
+
+La solution a été de nous tourner vers des modèles tels que les forêts aléatoires et les KNN, en restreignant les plages
+de recherche pour les hyper-paramètres afin de réduire la complexité computationnelle. Malgré ces limitations, nous
+avons
+déployé diverses techniques pour maximiser la qualité de nos prédictions avec ces approches.
+
+Dans les sections suivantes, nous détaillerons les méthodes employées pour améliorer les performances dans ces deux cas.
+
+### Métriques de Performance
+
+L'accuracy peut être trompeuse dans le cas de classes déséquilibrées comme les tirs au but.
+Ainsi, nous avons préféré utiliser le F1-score pondéré, qui met en balance la précision et le rappel,
+offrant une évaluation plus précise de notre capacité à identifier les buts tout en limitant les faux positifs et les
+faux négatifs.
+
+### Choix de la répartition des données
+
+Pour commencer, j’ai utilisé une stratégie de validation croisée en k-folds pour maximiser la robustesse des évaluations
+du modèle. Cette méthode divise les données en k sous-ensembles ou folds, avec chaque sous-ensemble prenant à tour de
+rôle le rôle de l’ensemble de validation pendant que les autres sont utilisés pour l’entraı̂nement.
+
+### La régularisation
+
+Les réseaux de neurones ont tendance à trop se spécialiser. Pour contrôler l’overfitting, deux stratégies de
+régularisation principales ont été appliquées : le dropout et la régularisation L2. Le dropout consiste à désactiver de
+manière aléatoire un certain pourcentage de neurones à chaque étape d’entraı̂nement. Sinon le réseaux devient trop
+dépendant de certaines connexions spécifiques et favorise la généralisation. La régularisation L2 pénalise les poids
+excessifs en ajoutant une contrainte à la fonction de perte, ce qui encourage le modèle à rechercher des solutions plus
+simples et moins sensibles aux variations des données.
+
+### Équilibre des classes
+
+Les buts représentent une fraction infime des événements, créant un déséquilibre. Pour compenser cela, nous avons
+introduit une pondération des classes directement dans la fonction de perte `BCEWithLogitsLoss`. De plus, un
+échantillonnage pondéré via `WeightedRandomSampler` ajuste la probabilité que les classes minoritaires soient incluses
+dans les lots d’entraînement, garantissant ainsi un apprentissage plus équilibré.
 
 ### Optimisation des hyper-paramètres
 
 Pour optimiser les performances de nos modèles, nous avons utilisé **Optuna** pour une optimisation bayésienne des
-hyper-paramètres.
-
+hyper-paramètres. Contrairement à la recherche aléatoire ou à la recherche par grille, cette méthode s’appuie sur un
+modèle
+probabiliste qui ajuste les hyper-paramètres de manière itérative en utilisant les résultats des expérimentations
+précédentes.
 Nous avons pu optimiser les résultats dans les plages suivantes :
 
 - La **taille des batches** dans une plage de 32 à 256.
@@ -231,23 +274,177 @@ Nous avons pu optimiser les résultats dans les plages suivantes :
 - Le **poids de régularisation** : contrôler la complexité des modèles et éviter l'overfitting
 - Le **minority_weight** : compenser le déséquilibre des classes dans les données de hockey, où les
   buts sont relativement rares par rapport aux tirs totaux.
+- **infer_threshold**: compense également le déséquilibre des classes, mais cette fois-ci, s'applique directement à
+  la prédiction
 
-### Exploration des Métriques de Performance
+### Chaque run correspond à un trial :
+https://wandb.ai/youry-macius-universite-de-montreal/IFT6758.2024-A11?nw=nwuserthierrypoey
 
-L'accuracy peut être trompeuse dans le cas de classes déséquilibrées comme les tirs au but.
-Ainsi, nous avons préféré utiliser le F1-score, qui met en balance la précision et le rappel,
-offrant une évaluation plus précise de notre capacité à identifier les buts tout en limitant les faux positifs et les
-faux négatifs.
+#### Pour obtenir le détail de toutes les runs :
 
-### Division des Données
+Filter -> Group -> "nomDuModele"
+
+Il y a 3 algorithmes enregistrés :
+  - Meilleur KNN (https://wandb.ai/youry-macius-universite-de-montreal/IFT6758.2024-A11/runs/9oaukztb?nw=nwuserthierrypoey)
+  - Meilleur Perceptron (https://wandb.ai/youry-macius-universite-de-montreal/IFT6758.2024-A11/runs/nj2fdg0x?nw=nwuserthierrypoey)
+  - Meilleur RandomForest (https://wandb.ai/youry-macius-universite-de-montreal/IFT6758.2024-A11/runs/1y3e9fv9?nw=nwuserthierrypoey)
+
 
 
 ### Visualisations des Performances
 
-- **Courbes ROC/AUC**:
--
-- **Taux de But par Centile de Probabilité** :
+**Courbes ROC/AUC**:
 
-- **Proportion Cumulée de Buts** :
+![](/public/RandomForest_trial_10_roc_curve.svg)
 
-- **Courbe de Fiabilité** :
+Random Forest : La courbe ROC montre une très bonne séparation des classes, avec une aire sous la courbe (AUC) élevée.
+Cela indique une bonne performance pour la distinction entre les buts et les non-buts.
+
+Perceptron : Il semble légèrement moins précis que Random Forest, avec une AUC inférieure. Il a du mal à capturer des
+relations complexes dans les données.
+
+KNN atteint un bon score AUC dans vos expériences. Il est efficace pour capturer les relations simples.
+On note quand même une dépendance forte à la métrique de distance Euclidienne, qui pourrait être optimale pour séparer
+les buts.
+
+**Taux de But par Centile de Probabilité** :
+
+![](/public/RandomForest_trial_10_goal_rate_vs_probability_percentile.svg)
+
+## Faites de votre mieux
+
+Au cours de cette étape, nous avons testé plusieurs modèles, utilisé plusieurs approches pour optimiser nos résultats.
+
+Nous avons commencé par utiliser des réseaux de neurones Perceptron et multicouches (MLP) pour évaluer différentes
+architectures. Le modèle de base (`Perceptron`) nous a servi de point de départ pour nos expérimentations. Ensuite, nous
+avons introduit
+des modèles plus complexes (`MLP_H1` et `MLP_H2`), avec une et deux couches cachées. Cela permettait de capturer les
+interactions entre les caractéristiques
+
+Malheureusement, l'optimisation s'est avérée être un défi majeur, nécessitant des ressources que nous n'avions pas à
+disposition. Face à ces cela, nous avons dû opter pour des méthodes plus simples, capables de s’entraîner avec un
+temps d'inférence raisonnable.
+
+La solution a été de nous tourner vers des modèles tels que les forêts aléatoires et les KNN, en restreignant les plages
+de recherche pour les hyper-paramètres afin de réduire la complexité computationnelle. Malgré ces limitations, nous
+avons
+déployé diverses techniques pour maximiser la qualité de nos prédictions avec ces approches.
+
+Dans les sections suivantes, nous détaillerons les méthodes employées pour améliorer les performances dans ces deux cas.
+
+### Métriques de Performance
+
+L'accuracy peut être trompeuse dans le cas de classes déséquilibrées comme les tirs au but.
+Ainsi, nous avons préféré utiliser le F1-score pondéré, qui met en balance la précision et le rappel,
+offrant une évaluation plus précise de notre capacité à identifier les buts tout en limitant les faux positifs et les
+faux négatifs.
+
+### Choix de la répartition des données
+
+Pour commencer, j’ai utilisé une stratégie de validation croisée en k-folds pour maximiser la robustesse des évaluations
+du modèle. Cette méthode divise les données en k sous-ensembles ou folds, avec chaque sous-ensemble prenant à tour de
+rôle le rôle de l’ensemble de validation pendant que les autres sont utilisés pour l’entraı̂nement.
+
+### La régularisation
+
+Les réseaux de neurones ont tendance à trop se spécialiser. Pour contrôler l’overfitting, deux stratégies de
+régularisation principales ont été appliquées : le dropout et la régularisation L2. Le dropout consiste à désactiver de
+manière aléatoire un certain pourcentage de neurones à chaque étape d’entraı̂nement. Sinon le réseaux devient trop
+dépendant de certaines connexions spécifiques et favorise la généralisation. La régularisation L2 pénalise les poids
+excessifs en ajoutant une contrainte à la fonction de perte, ce qui encourage le modèle à rechercher des solutions plus
+simples et moins sensibles aux variations des données.
+
+### Équilibre des classes
+
+Les buts représentent une fraction infime des événements, créant un déséquilibre. Pour compenser cela, nous avons
+introduit une pondération des classes directement dans la fonction de perte `BCEWithLogitsLoss`. De plus, un
+échantillonnage pondéré via `WeightedRandomSampler` ajuste la probabilité que les classes minoritaires soient incluses
+dans les lots d’entraînement, garantissant ainsi un apprentissage plus équilibré.
+
+### Optimisation des hyper-paramètres
+
+Pour optimiser les performances de nos modèles, nous avons utilisé **Optuna** pour une optimisation bayésienne des
+hyper-paramètres. Contrairement à la recherche aléatoire ou à la recherche par grille, cette méthode s’appuie sur un
+modèle
+probabiliste qui ajuste les hyper-paramètres de manière itérative en utilisant les résultats des expérimentations
+précédentes.
+Nous avons pu optimiser les résultats dans les plages suivantes :
+
+- La **taille des batches** dans une plage de 32 à 256.
+- Le **taux d'apprentissage**, : taux d'apprentissage logarithmique entre (10⁻⁵) et (10⁻¹).
+- Le **poids de régularisation** : contrôler la complexité des modèles et éviter l'overfitting
+- Le **minority_weight** : compenser le déséquilibre des classes dans les données de hockey, où les
+  buts sont relativement rares par rapport aux tirs totaux.
+- **infer_threshold**: compense également le déséquilibre des classes, mais cette fois-ci, s'applique directement à
+  la prédiction
+
+### Chaque run correspond à un trial :
+https://wandb.ai/youry-macius-universite-de-montreal/IFT6758.2024-A11?nw=nwuserthierrypoey
+
+#### Pour obtenir le détail de toutes les runs :
+
+Filter -> Group -> "nomDuModele"
+
+Il y a 3 algorithmes enregistrés :
+  - Meilleur KNN (https://wandb.ai/youry-macius-universite-de-montreal/IFT6758.2024-A11/runs/9oaukztb?nw=nwuserthierrypoey)
+  - Meilleur Perceptron (https://wandb.ai/youry-macius-universite-de-montreal/IFT6758.2024-A11/runs/nj2fdg0x?nw=nwuserthierrypoey)
+  - Meilleur RandomForest (https://wandb.ai/youry-macius-universite-de-montreal/IFT6758.2024-A11/runs/1y3e9fv9?nw=nwuserthierrypoey)
+
+
+
+### Visualisations des Performances
+
+**Courbes ROC/AUC**:
+
+![](/public/RandomForest_trial_10_roc_curve.svg)
+
+Random Forest : La courbe ROC montre une très bonne séparation des classes, avec une aire sous la courbe (AUC) élevée.
+Cela indique une bonne performance pour la distinction entre les buts et les non-buts.
+
+Perceptron : Il semble légèrement moins précis que Random Forest, avec une AUC inférieure. Il a du mal à capturer des
+relations complexes dans les données.
+
+KNN atteint un bon score AUC dans vos expériences. Il est efficace pour capturer les relations simples.
+On note quand même une dépendance forte à la métrique de distance Euclidienne, qui pourrait être optimale pour séparer
+les buts.
+
+**Taux de But par Centile de Probabilité** :
+
+![](/public/RandomForest_trial_10_goal_rate_vs_probability_percentile.svg)
+
+Random Forest :  Il identifie efficacement les configurations qui se combine pour indiquer
+une forte probabilité de but comme la combinaison d’angle optimal et de faible distance.
+Une forte accumulation de buts dans les probabilités les plus élevées reflète sa capacité à exploiter des interactions
+complexes.
+
+**Proportion Cumulée de Buts** :
+
+![](/public/RandomForest_trial_10_cumulative_goal_rate.svg)
+
+Random Forest : Même si la courbe est mauvaise, elle est plutôt linéaire ou moins abrupte reflète une difficulté à
+discriminer les buts des non-buts, même dans les probabilités les plus élevées.
+
+**Courbe de fiabilité**
+
+![](/public/RandomForest_trial_10_reliability_curve.svg)
+
+Random Forest : D'assez bons résultats grâce mécanisme d’agrégation. Chaque arbre contribue une prédiction probabiliste
+basée
+sur sa portion d’entraînement, et leur combinaison produit une meilleure estimation finale. l’objectif aurait été
+d’avoir une courbe qui suit de près la diagonale pour tous les folds. Cependant, avec des ajustements des
+hyper-paramètres
+ces performances peuvent être significativement améliorées.
+
+## Évaluer sur l'ensemble de test
+
+### Test sur les données de la saison régulière
+
+On a obtenu ces graphiques:
+
+![](/public/test_set_q1_roc.png)
+
+![](/public/test_set_q1_goal_rate.png)
+
+![](/public/test_set_q1_reliability_diagram.png)
+
+### Test sur les données de la série éliminatoire
